# file-api-server

./: Cargo.toml  README.md  Rocket.toml
src/: db_connect.rs  function.rs  main.rs
upload/: 1663485017908  1663520211182  1663521216038  1663672262853  1663674421505  1663774003382
